-Transfer TextView (to the bottom of the screen for easy input)  -Removed button (all functionality in TextView)  -Hide the keyboard after typing  -External developments

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
           package="com.nimtego.itunes">
+
     <uses-permission android:name="android.permission.INTERNET"/>
 
     <application
@@ -11,7 +12,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.AlbumsCollectionActivity">
+        <activity android:name=".view.AlbumsCollectionActivity"
+                  android:screenOrientation="portrait"
+                  android:label="@string/app_name"
+                  android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
