--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,15 +12,18 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".view.AlbumsCollectionActivity"
-                  android:screenOrientation="portrait"
-                  android:label="@string/app_name"
-                  android:windowSoftInputMode="adjustResize|stateHidden">
+        <activity
+            android:name=".view.AlbumsCollectionActivity"
+            android:label="@string/app_name"
+            android:screenOrientation="portrait"
+            android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN"/>
 
                 <category android:name="android.intent.category.LAUNCHER"/>
             </intent-filter>
+        </activity>
+        <activity android:name=".view.InformationAlbumActivity">
         </activity>
     </application>
 
