--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,7 +13,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme">
         <activity
-            android:name=".view.AlbumsCollectionActivity"
+            android:name=".view.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
@@ -24,7 +24,7 @@
         </activity>
         <activity android:name=".view.InformationAlbumActivity">
         </activity>
-        <activity android:name=".MainActivity">
+        <activity android:name=".view.AlbumsCollectionActivity">
         </activity>
     </application>
 
