--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,7 +24,6 @@ android {
 }
 
 dependencies {
-
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.2'
@@ -32,8 +31,13 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
     androidTestImplementation 'org.projectlombok:lombok:1.18.2'
     androidTestAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
+    
+    //rxjava 2
+    implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+    //dager 2
+    implementation 'com.google.dagger:dagger:2.18'
 
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -50,6 +54,7 @@ dependencies {
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+
 }
 repositories {
     mavenCentral()
