--- a/app/build.gradle
+++ b/app/build.gradle
@@ -24,6 +24,8 @@ android {
 }
 
 dependencies {
+    implementation fileTree(include: ['*.jar'], dir: 'libs')
+
     //lombok
     compileOnly 'org.projectlombok:lombok:1.18.2'
     annotationProcessor 'org.projectlombok:lombok:1.18.2'
@@ -34,10 +36,12 @@ dependencies {
     
     //rxjava 2
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
+
     //dager 2
     implementation 'com.google.dagger:dagger:2.18'
-
-    implementation fileTree(include: ['*.jar'], dir: 'libs')
+    //mockito
+    testImplementation 'org.mockito:mockito-core:2.21.0'
+    
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
