--- a/app/build.gradle
+++ b/app/build.gradle
@@ -12,9 +12,6 @@ android {
         testInstrumentationRunner "android.support.test.runner.AndroidJUnitRunner"
     }
     buildTypes {
-        debug {
-            testCoverageEnabled true
-        }
         release {
             minifyEnabled false
             proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
@@ -36,15 +33,18 @@ dependencies {
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
     androidTestImplementation 'org.projectlombok:lombok:1.18.2'
     androidTestAnnotationProcessor 'org.projectlombok:lombok:1.18.2'
-    
     //rxjava 2
     implementation 'io.reactivex.rxjava2:rxjava:2.2.3'
-
+    implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //dager 2
     implementation 'com.google.dagger:dagger:2.18'
     //mockito
     testImplementation 'org.mockito:mockito-core:2.21.0'
-    
+    //retrofit
+    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
+    implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.1.0'
+    implementation 'com.jakewharton.retrofit:retrofit2-rxjava2-adapter:1.0.0'
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
@@ -55,8 +55,7 @@ dependencies {
     implementation 'com.android.support:recyclerview-v7:26.1.0'
     implementation 'com.jakewharton:butterknife:8.8.1'
     annotationProcessor 'com.jakewharton:butterknife-compiler:8.8.1'
-    implementation 'com.squareup.retrofit2:retrofit:2.3.0'
-    implementation 'com.squareup.retrofit2:converter-gson:2.3.0'
+
     implementation 'com.android.support:design:26.1.0'
     implementation 'com.android.support:cardview-v7:26.1.0'
     implementation 'com.squareup.picasso:picasso:2.71828'
