--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-          package="com.nimtego.itunes">
+    xmlns:tools="http://schemas.android.com/tools"
+    package="com.nimtego.itunes">
 
     <uses-permission android:name="android.permission.INTERNET"/>
 
@@ -11,7 +12,7 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MyMaterialTheme">
+        android:theme="@style/Theme.Design.Light.NoActionBar">
         <activity
             android:name=".presentation.main.MainActivity"
             android:label="@string/app_name"
