--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -12,7 +12,8 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/MyMaterialTheme.Base">
+        android:theme="@style/MyMaterialTheme.Base"
+        tools:ignore="GoogleAppIndexingWarning">
         <activity
             android:name=".presentation.main.MainActivity"
             android:label="@string/app_name"
