--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,6 +38,7 @@ dependencies {
     implementation 'io.reactivex.rxjava2:rxandroid:2.1.0'
     //dager 2
     implementation 'com.google.dagger:dagger:2.18'
+    annotationProcessor 'com.google.dagger:dagger-compiler:2.12'
     //mockito
     testImplementation 'org.mockito:mockito-core:2.21.0'
     //retrofit
