Small fix build.gradle:  - duplicate dependency Other:  - remove unused imports

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,6 +6,7 @@ android {
     defaultConfig {
         applicationId "com.nimtego.itunes"
         minSdkVersion 24
+        //noinspection OldTargetApi
         targetSdkVersion 26
         versionCode 1
         versionName "1.0"
