--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,7 +14,7 @@
         android:supportsRtl="true"
         android:theme="@style/MyMaterialTheme.Base"
         tools:ignore="GoogleAppIndexingWarning">
-        <activity android:name=".presentation.ui.MainActivity"></activity>
+        <activity android:name=".presentation.migrate_kotlin.ui.MainActivity"></activity>
         <activity
             android:name=".presentation.main.MainActivity"
             android:label="@string/app_name"
