--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".presentation.migrate_kotlin.ui.MainActivity"></activity>
         <activity
-            android:name=".presentation.main.MainActivity"
+            android:name=".presentation.main.MainActivityK"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
@@ -25,7 +25,7 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".presentation.information_view.DetailedInformationActivity"></activity>
+        <activity android:name=".presentation.information_view.DetailedInformationActivityK"></activity>
     </application>
 
 </manifest>
