--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,7 +16,7 @@
         tools:ignore="GoogleAppIndexingWarning">
         <activity android:name=".presentation.main.MainActivity"></activity>
         <activity
-            android:name=".presentation.migrate_kotlin.ui.MainActivity"
+            android:name=".presentation.ui.activity.MainActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
