--- a/app/build.gradle
+++ b/app/build.gradle
@@ -50,6 +50,9 @@ dependencies {
     //mockito
     testImplementation 'org.mockito:mockito-core:2.21.0'
 
+    //rxrelay
+    implementation 'com.jakewharton.rxrelay2:rxrelay:2.1.0'
+
     //retrofit
     implementation 'com.squareup.retrofit2:retrofit:2.4.0'
     implementation 'com.squareup.retrofit2:adapter-rxjava:2.4.0'
