--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -15,7 +15,7 @@
         android:theme="@style/MyMaterialTheme.Base"
         tools:ignore="GoogleAppIndexingWarning">
         <activity
-            android:name=".presentation.ui.activity.MainActivity"
+            android:name=".presentation.ui.activity.AppActivity"
             android:label="@string/app_name"
             android:windowSoftInputMode="adjustResize|stateHidden">
             <intent-filter>
@@ -24,7 +24,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name="com.nimtego.plectrum.presentation.mvp.view_model.information_view.DetailedInformationActivity" />
     </application>
 
 </manifest>
