--- a/app/build.gradle
+++ b/app/build.gradle
@@ -6,7 +6,7 @@ apply plugin: 'kotlin-kapt'
 android {
     compileSdkVersion 26
     defaultConfig {
-        applicationId "com.nimtego.itunes"
+        applicationId "com.nimtego.plectrum"
         minSdkVersion 24
         //noinspection OldTargetApi
         targetSdkVersion 26
@@ -84,6 +84,9 @@ dependencies {
 
     //noinspection GradleCompatible
     implementation 'com.android.support:appcompat-v7:26.1.0'
+    //libraries use 27.1.0 version exifinterface
+    //to remove upon transition to 27+
+    implementation 'com.android.support:exifinterface:26.1.0'
     implementation 'com.android.support.constraint:constraint-layout:1.1.3'
     implementation 'com.android.support:support-v4:26.1.0'
     testImplementation 'junit:junit:4.12'
